--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -63,7 +63,10 @@ body{
         padding: 5px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
       }
-      font-size: 10px;
+      
+      @media(max-width:768px){
+        font-size: 10px;
+      }
     }
     .example{
       display: flex;
